--- a/reflections/week01/01.md
+++ b/reflections/week01/01.md
@@ -22,5 +22,11 @@ Below you will find reading materials that support today's topic and the upcomin
 - Summarize what you learned from the China's Spy Chip Reading
 - Answer the following questions
   - What is a CPU and Cores
+    - The CPU is the centeral processing unit, it if filled with billions of tiny transistors that carry out the input/output opertions and the cores are the unit that receives and executes the instructions
+
   - What is RAM why do computers use it.
+    - RAM is Random Access Memory, it is your computers main memory but it is volatile. RAM does not retain any data after it loses power. It is mainly used to run the OS.
+
 - Identify at least 1 takeaway from today's assignment
+ -I mostly knew what the propose of the CPU and RAM but I didnt know that the CPU had  
+ that many tiny transistors in it, totally mind blowing.
