--- a/reflections/week01/02.md
+++ b/reflections/week01/02.md
@@ -22,10 +22,12 @@ Below you will find some reading materials and videos that support today's topic
 
 - What is the Bootloader
 
-  -
+  - The Bootloader is a program that the BIOS starts to get the operating system running.
 
 - What is an Operating System
 
-  -
+  - The opperating system is the most important software to the user because this is how you communicate with the computer and tell it what to do.
 
 - Identify at least 1 takeaway from today's assignment
+
+  - I really enjoy refreshing on subjects I had some understanding and learning more about the how and why something works they way it does.
