--- a/reflections/week01/03.md
+++ b/reflections/week01/03.md
@@ -16,20 +16,26 @@
 ## Questions
 
 - What is a CLI?
+
+  - CLI is a Command line interface, it is a text based user interface. It is much different than a GUI graphical user interface.
+
 - What do the following commands do?
-  - `cd`
-  - `md/mkdir`
-  - `ls/dir`
-  - `ip a`
-  - `ipconfig/ifconfig`
-  - `netstat`
-  - `cat`
-  - `echo`
-  - `mv`
-  - `cp`
-  - `rm`
-  - `sudo`
+  - `cd` current directory
+  - `md/mkdir` make directory
+  - `ls/dir` list files
+  - `ip a` is the ip address
+  - `ipconfig/ifconfig` shows all the current ip info
+  - `netstat` network connections and stats
+  - `cat` concatenate and print the contents of the file
+  - `echo` write within a file
+  - `mv` move or rename file
+  - `cp` copy one or more files to another location
+  - `rm` remove
+  - `sudo` super user do
+
 - What is a command flag or switch?
+
+  - command flags or switch can be added to a prompt that can turn on and off some features but it can also provide more detailed information based on the type of command before the flag.
 
 ### Extra 
 - Did you follow along with the NetworkChuck video? 
