--- a/reflections/week01/04.md
+++ b/reflections/week01/04.md
@@ -12,4 +12,11 @@
 ## Questions
 
 - What is remote access?
+
+  -SSH is a way to have remote access from a client to a server. A client user can use a public and private key to gain authorized access, once authenticated the client user can transfer files and use automated systems to configure management.
+
+  -RDP is used to connect Windows devices. Users can have full access to PCs and servers using RDP. Setting up a RDP connection for a non-admin user can be a way to protect and limit access. This can ensure that potential rogue connections can not do much damage.
+
 - What is a Virtual Machine?
+
+  - A virtual machine is software that can mimic a real computer. You can add componets to a VM like adjusting cpu cores, ram allocation, hard disk space, network adapters, etc.
